<resources>
    <string name="app_name">BudayAI</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="title_objek_populer">OBJEK BUDAYA POPULER</string>
    <string name="nama_suku">Nama Suku</string>
    <string name="jenis_ornamen">List, Apa, Yang, Ada, Di Suku Ini</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="katalog">KATALOG</string>
    <string name="title_budaya">OBJEK BUDAYA SUKU</string>
    <string name="profile">Profile</string>
    <string name="title_nama_suku">Nama Suku</string>
    <string name="deskripsi_singkat">Deskripsi Singkat</string>
    <string name="title_detail_suku">Detail Suku</string>
    <string name="title_ornamen_budaya">ORNAMEN BUDAYA</string>
    <string name="title_tab_description">Deskripsi</string>
    <string name="title_tab_sejarah">Sejarah</string>
    <string name="title_tab_gallery">Gallery</string>
    <string name="sample_text_detail">Burung Enggang digunakan sebagai simbol kebesaran dan kemuliaan suku tersebut, melambangkan perdamaian dan persatuan, sayapnya yang tebal melambangkan pemimpin yang selalu melindungi rakyatnya. Sedangkan ekor panjangnya dianggap sebagai tanda kemakmuran rakyat suku Dayak. Suku Dayak Kalimantan dalam kehidupannya sangat erat dengan fauna gagah satu ini, cerita dan mitos.</string>
    <string name="map_style">MAP STYLE</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type">MAP TYPE</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_style_night">Night</string>
    <string name="map_style_normal">Normal</string>
    <string name="sample_number">2</string>
    <string name="budaya_bercerita">Budaya Bercerita</string>
    <string name="budayai">BudayAI</string>
    <string name="found_ornamen">Ornamen Budaya Ditemukan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hint_pass">*******</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_any_account">Don’t have any account?</string>
    <string name="location_view">Location View</string>
    <string name="sign_up">Sign Up</string>
    <string name="error_took_image">Error Take Image</string>
    <string name="error">Error</string>
    <string name="choose_image">Choose Image</string>
    <string name="required">Required</string>
    <string name="ornamen_name">Ornamen Name</string>
    <string name="score_detection">Detection Score</string>
    <string name="result">Result:</string>
    <string name="detect_failed">Detection Failed</string>
    <string name="detect_success">Detection Success</string>
    <string name="select_model">Select Model</string>
    <string name="select_model_input_model_1_model_2">Select model (input model_1 / model_2)</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="predict">Predict</string>
    <string name="dalam_tahap_pengembangan">Dalam Tahap Pengembangan</string>
    <string name="halaman_profile_dalam_tahap_pengembangan">HALAMAN PROFILE (Dalam Tahap Pengembangan)</string>
    <string-array name="models">
        <item>Model 1</item>
        <item>Model 2</item>
    </string-array>
</resources>