<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/swipe_popup"
    tools:context=".auth.RegisterFragment">

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/grey3"
        android:textSize="14sp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColor="@color/grey3"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="18dp"
        android:textColor="@color/grey3"
        android:textSize="14sp"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColor="@color/grey3"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/password"
        android:textColor="@color/grey3"
        android:textSize="14sp"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/poppins_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="277dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/hint_pass"
        android:paddingStart="15dp"
        android:textColor="@color/grey3"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="173dp"
        android:layout_height="43dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_auth"
        android:text="@string/register"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:layout_marginTop="36dp"/>

    <TextView
        android:id="@+id/tv_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/have_account"
        android:textColor="@color/brown2"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register" />

    <TextView
        android:id="@+id/redirect_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/blue"
        android:layout_marginStart="2dp"
        android:textSize="10sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_italic"
        app:layout_constraintStart_toEndOf="@id/tv_redirect"
        app:layout_constraintTop_toBottomOf="@id/btn_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>