<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/swipe_popup"
    app:behavior_hideable="true"
    android:orientation="vertical"
    android:id="@+id/loginPopup"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".auth.LoginPopupFragment">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="56dp"
        android:text="@string/username"
        android:textColor="#1B1B1B"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="310dp"
        android:layout_height="42dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#323232"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="56dp"
        android:text="@string/password"
        android:textColor="#1B1B1B"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="310dp"
        android:layout_height="42dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/hint_pass"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="#323232"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="173dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_auth"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <TextView
        android:id="@+id/tv_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/don_t_have_any_account"
        android:textColor="@color/brown2"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/redirect_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="10sp"
        android:fontFamily="@font/poppins_italic"
        app:layout_constraintStart_toEndOf="@id/tv_redirect"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dalam Tahap Pengembangan"
        android:textColor="@color/brown2"
        android:textSize="10sp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_redirect"/>

</androidx.constraintlayout.widget.ConstraintLayout>