<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".analys.AnalysFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/v_image"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_margin="16dp"
            android:src="@drawable/placeholder_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/btn_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_image"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_took_galery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_gallery"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_margin="16dp" />

            <Button
                android:id="@+id/btn_took_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from_camera"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_margin="16dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/tv_select_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_image"
            app:layout_constraintStart_toStartOf="parent"
            android:ems="20"
            android:hint="@string/select_model_input_model_1_model_2"/>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semi_bold"
            android:backgroundTint="@color/choco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_model"
            android:enabled="false"
            android:text="@string/predict"/>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload"
            android:enabled="false"
            android:text="@string/result"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_result"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:transitionName="detail_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_result"
            tools:listitem="@layout/item_suku" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>