<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:background="@drawable/swipe_popup"
    tools:context=".analisisKatalog.AnalisisKatalogFragment">

    <View
        android:id="@+id/splitter"
        android:layout_width="92dp"
        android:layout_height="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/pink" />

    <TextView
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@id/size_search"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/found_ornamen"
        android:textColor="@color/brown_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toEndOf="@+id/size_search"
        app:layout_constraintTop_toTopOf="@+id/size_search" />

    <TextView
        android:id="@+id/size_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/sample_number"
        android:textColor="@color/brown_light"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@id/size_search"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_suku"
        android:layout_marginBottom="270dp"
        android:layout_marginTop="180dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/budaya_bercerita"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>