<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".location.option.StyleMapFragment">

    <View
        android:id="@+id/splitter"
        android:layout_width="92dp"
        android:layout_height="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/brown_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitter"
        android:layout_marginTop="32dp"
        android:text="@string/map_type"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/type_normal"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:elevation="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="13dp"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/img_type_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_default"
            android:background="@color/black" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/type_satellite"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp"
        app:elevation="0dp"
        app:cardCornerRadius="13dp">

        <ImageView
            android:id="@+id/img_type_satellite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_satellite"
            android:background="@color/black" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/type_normal"
        app:layout_constraintEnd_toEndOf="@+id/type_normal"
        app:layout_constraintStart_toStartOf="@+id/type_normal"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        android:text="@string/map_type_normal"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_satellite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/type_satellite"
        app:layout_constraintEnd_toEndOf="@+id/type_satellite"
        app:layout_constraintStart_toStartOf="@+id/type_satellite"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        android:text="@string/map_type_satellite"
        android:layout_marginTop="8dp"/>

    <View
        android:id="@+id/split"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="220dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/tv_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/split"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/brown_light"
        android:text="@string/map_style" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/split"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        android:layout_marginStart="24dp"
        app:constraint_referenced_ids="tvv_style_normal,style_night,style_normal,tvv_style_night,tv_style" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/style_normal"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_style"
        app:elevation="0dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="13dp">

        <ImageView
            android:id="@+id/img_style_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_default"
            android:background="@color/black" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/style_night"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:elevation="0dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="13dp">

        <ImageView
            android:id="@+id/img_style_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_style_night"
            android:background="@color/black" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvv_style_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/style_normal"
        app:layout_constraintEnd_toEndOf="@+id/style_normal"
        app:layout_constraintStart_toStartOf="@+id/style_normal"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:text="@string/map_style_normal" />

    <TextView
        android:id="@+id/tvv_style_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/style_night"
        app:layout_constraintEnd_toEndOf="@+id/style_night"
        app:layout_constraintStart_toStartOf="@+id/style_night"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:text="@string/map_style_night" />

</androidx.constraintlayout.widget.ConstraintLayout>